--- a/indeks.html
+++ b/indeks.html
@@ -4,9 +4,20 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="./styles.css">
         <title>Cars</title>
 </head>
 <body>
+    <header class="header">
+        <a href="#" class="logo">
+          <img src="logo.png" alt="">
+        </a>
+        <nav class="navbar">
+          <a href="#home">HOME</a>
+          <a href="#about">ABOUT US</a>
+          <a href="#products">PRODUCTS</a>   
+        </nav>
+      </header> 
 
 </body>
 </html>
