--- a/indeks.html
+++ b/indeks.html
@@ -18,7 +18,14 @@
           <a href="#products">PRODUCTS</a>   
         </nav>
       </header> 
-
+    <section class="home" id="home">
+        <div class="content">
+            <h2>BUY NEW OR USED CAR ONLINE</h2>
+           <h1>FIND YOUR DREAM CAR</h1>
+           <h2>"Get the Latest Car Reviews & Best Deals."</h2>
+         </div>
+    </section>
 </body>
+<script src="./script.js"></script>
 </html>
 
