--- a/indeks.html
+++ b/indeks.html
@@ -25,6 +25,12 @@
            <h2>"Get the Latest Car Reviews & Best Deals."</h2>
          </div>
     </section>
+    
+    <section class="products" id="products">
+        <h1 class="heading"> OUR CARS </h1>
+    <div id="container"></div>
+    </section>
+    
 </body>
 <script src="./script.js"></script>
 </html>
