--- a/indeks.html
+++ b/indeks.html
@@ -31,6 +31,7 @@
     <div id="container"></div>
     </section>
     
+    <div class="credit">created by Ismail Bektas | all rights reserved</div>
 </body>
 <script src="./script.js"></script>
 </html>
