--- a/indeks.html
+++ b/indeks.html
@@ -6,8 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="http://fonts.cdnfonts.com/css/inheritance" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Cars</title>
 </head>
 <body>
@@ -17,10 +16,10 @@
         </a>
         <nav class="navbar">
           <a href="#home">HOME</a>
-          <a href="#about">ABOUT US</a>
           <a href="#products">PRODUCTS</a>   
         </nav>
       </header> 
+
     <section class="home" id="home">
         <div class="content">
             <h2>BUY NEW OR USED CAR ONLINE</h2>
@@ -31,16 +30,105 @@
     
     <section class="products" id="products">
         <h1 class="heading"> OUR CARS </h1>
-    <div id="container"></div>
+        
+    <div class="add">
+        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#modalLoginForm">Add new car</button>
+    </div>
 
-    </section>
+    <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header text-center">
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="md-form mb-4">
+               <div class="md-form mb-4">
+                <label for="car-id" class="col-form-label">ID:</label>
+                <input type="text" class="form-control" id="car-id">
+               </div>
+               <div class="md-form mb-4">
+                <label for="car-name" class="col-form-label">Name:</label>
+                <input type="text" class="form-control" id="car-name">
+              </div>
+              <div class="md-form mb-4">
+                <label for="car-manufacturer" class="col-form-label">Manufacturer:</label>
+                <input type="text" class="form-control" id="car-manufacturer">
+              </div>
+              <div class="md-form mb-4">
+                <label for="car-url" class="col-form-label">ImgURL:</label>
+                <input type="text" class="form-control" id="car-url">
+              </div>
+              <div class="md-form mb-4">
+                <label for="car-price" class="col-form-label">Price:</label>
+                <input type="text" class="form-control" id="car-price">
+              </div>
+              <div class="md-form mb-4">
+                <label for="car-year" class="col-form-label">Year:</label>
+                <input type="text" class="form-control" id="car-year">
+              </div>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="button" class="btn btn-dark" onClick="addCar()">Add</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    <div id="container"></div>
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+             <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <form>
+                    <div class="group">
+                        <label for="car-id1" class="col-form-label">ID:</label>
+                        <input type="text" class="form-control" id="car-id1" disabled>
+                       </div>
+                       <div class="group">
+                        <label for="car-name1" class="col-form-label">Name:</label>
+                        <input type="text" class="form-control" id="car-name1">
+                      </div>
+                      <div class="group">
+                        <label for="car-manufacturer1" class="col-form-label">Manufacturer:</label>
+                        <input type="text" class="form-control" id="car-manufacturer1">
+                      </div>
+                      <div class="group">
+                        <label for="car-url1" class="col-form-label">ImgURL:</label>
+                        <input type="text" class="form-control" id="car-url1">
+                      </div>
+                      <div class="group">
+                        <label for="car-price1" class="col-form-label">Price:</label>
+                        <input type="text" class="form-control" id="car-price1">
+                      </div>
+                      <div class="group">
+                        <label for="car-year1" class="col-form-label">Year:</label>
+                        <input type="text" class="form-control" id="car-year1">
+                      </div>
+                  </form>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-dark" onClick="putCar()">Edit</button>
+                </div>
+            </div>
+          </div>
+        </div>
+
+</section>
+
 
     <div class="credit">created by Ismail Bektas | all rights reserved</div>
 </body>
-<script src="./script.js"></script>
+<script src="script.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 </html>
-
