konacna verzija koda

--- a/indeks.html
+++ b/indeks.html
@@ -90,7 +90,7 @@
                   <form>
                     <div class="group">
                         <label for="car-id1" class="col-form-label">ID:</label>
-                        <input type="text" class="form-control" id="car-id1" disabled>
+                        <input type="text" class="form-control" id="car-id1">
                        </div>
                        <div class="group">
                         <label for="car-name1" class="col-form-label">Name:</label>
